# simulador-de-colisoes-cpp

./: CMakeLists.txt  README.md  entrada.txt
src/: main.cpp
